--- a/latihan.html
+++ b/latihan.html
@@ -8,7 +8,7 @@
 <body>
 	<head>aaaaa</head>
 	<body>
-		asdfkjaslkdjflkjasdlkf asdjhfkajshdfkjhasdkjhfkj
+		asdfkjaslkdjflkjasdlkf asdjhfkajshdfkjhasdkjhfkj asdfasdfasdf
 	</body>
 </body>
 </html>
